# ELD

./: .gitignore  .readthedocs.yml  MTFAN.py  README.md  Train_options.py  _pyproject.toml  databases.py  model.py  pyproject.toml  requirements.txt  setup.py  train.py  utils.py  warp.py
ELD/: MTFAN.py  Train_options.py  databases.py  model.py  train.py  utils.py  warp.py
ELD.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/source/: conf.py  index.md  index.rst  usage.md
docs/source/notebooks/: 3d.ipynb  multimodal.ipynb  tutorial.ipynb  unimodal.ipynb
notebooks/: 3d.ipynb  multimodal.ipynb  unimodal.ipynb
