[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name="ELD"
version="0.0.1"
description = "Spatial landmark detection for tissue images and registration"
authors = [{name="Markus Ekvall", email="marekv@kth.se"}]
dependencies = [
    "argon2-cffi==21.3.0",
    "argon2-cffi-bindings==21.2.0",
    "async-generator==1.10",
    "attrs==21.2.0",
    "backcall==0.2.0",
    "bleach==4.1.0",
    "certifi==2021.10.8",
    "cffi==1.15.0",
    "charset-normalizer==2.0.9",
    "cycler==0.11.0",
    "decorator==4.4.2",
    "defusedxml==0.7.1",
    "einops==0.3.2",
    "elasticdeform==0.4.9",
    "entrypoints==0.3",
    "googledrivedownloader==0.4",
    "GPUtil==1.4.0",
    "idna==3.3",
    "imageio==2.13.5",
    "importlib-metadata==4.8.3",
    "ipdb==0.13.9",
    "ipykernel==5.5.6",
    "ipython==7.16.2",
    "ipython-genutils==0.2.0",
    "ipywidgets==7.6.5",
    "isodate==0.6.1",
    "jedi==0.17.2",
    "Jinja2==3.0.3",
    "joblib==1.1.0",
    "jsonpatch==1.32",
    "jsonpointer==2.2",
    "jsonschema==3.2.0",
    "jupyter==1.0.0",
    "jupyter-client==7.1.0",
    "jupyter-console==6.4.0",
    "jupyter-core==4.9.1",
    "jupyterlab-pygments==0.1.2",
    "jupyterlab-widgets==1.0.2",
    "kiwisolver==1.3.1",
    "kornia==0.6.2",
    "MarkupSafe==2.0.1",
    "matplotlib==3.3.4",
    "mistune==0.8.4",
    "nbclient==0.5.9",
    "nbconvert==6.0.7",
    "nbformat==5.1.3",
    "nest-asyncio==1.5.4",
    "networkx==2.5.1",
    "notebook==6.4.6",
    "numpy==1.19.5",
    "olefile==0.46",
    "packaging==21.3",
    "pandas==1.1.5",
    "pandocfilters==1.5.0",
    "parso==0.7.1",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "Pillow==8.4.0",
    "prometheus-client==0.12.0",
    "prompt-toolkit==3.0.24",
    "ptyprocess==0.7.0",
    "pycparser==2.21",
    "Pygments==2.10.0",
    "pyparsing==3.0.6",
    "pyrsistent==0.18.0",
    "python-dateutil==2.8.2",
    "pytz==2021.3",
    "PyWavelets==1.1.1",
    "PyYAML==6.0",
    "pyzmq==22.3.0",
    "qtconsole==5.2.2",
    "QtPy==1.11.3",
    "rdflib==5.0.0",
    "requests==2.26.0",
    "scikit-image==0.17.2",
    "scikit-learn==0.24.2",
    "scipy==1.5.4",
    "Send2Trash==1.8.0",
    "terminado==0.12.1",
    "testpath==0.5.0",
    "threadpoolctl==3.0.0",
    "tifffile==2020.9.3",
    "toml==0.10.2",
    "torch==1.10.1",
    "torchaudio==0.10.1",
    "torchfile==0.1.0",
    "torchgeometry==0.1.2",
    "torchnet==0.0.4",
    "torchvision==0.11.2",
    "tornado==6.1",
    "tqdm==4.62.3",
    "traitlets==4.3.3",
    "typing_extensions==4.0.1",
    "urllib3==1.26.7",
    "visdom==0.1.8.9",
    "wcwidth==0.2.5",
    "webencodings==0.5.1",
    "websocket-client==1.2.3",
    "widgetsnbextension==3.5.2",
    "yacs==0.1.8",
    "zipp==3.6.0"
]

[project.optional-dependencies]
doc = [
    "sphinx~=4.2.0",
    "myst-parser",
    "furo"
]


